feat: add initial game state machine

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,10 @@ version: 1.0.0+1
 environment:
   sdk: '>=3.2.6 <4.0.0'
 
+scripts:
+  gen:
+    states: dart lib/state/gen_states.dart
+
 dependencies:
   flutter:
     sdk: flutter
