--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,12 +15,16 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  dartx: ^1.2.0
   flame: ^1.15.0
+  logger: ^2.2.0
+  stack_trace: ^1.11.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  test: ^1.24.3
 
 flutter:
   uses-material-design: true
