--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,16 +9,17 @@ environment:
 
 scripts:
   gen:
-    states: dart lib/state/gen_states.dart
+    flags: dart lib/state/gen_flags.dart
 
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
   dartx: ^1.2.0
-  flame: ^1.15.0
+  # flame: ^1.15.0
   logger: ^2.2.0
   stack_trace: ^1.11.1
+  bonfire: ^3.6.2
 
 dev_dependencies:
   flutter_test:
@@ -30,3 +31,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/images/tilesets/
