--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,10 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   test: ^1.24.3
 
+dependency_overrides:
+  bonfire:
+    path: ../bonfire
+
 flutter:
   uses-material-design: true
   assets:
